<resources>
    <string name="app_name">BuglyDemo</string>
    <string name="remember_password">记住密码</string>
    <string name="login_ing">登录中...</string>
    <string name="commit_data_ing">提交数据中...</string>
    <string name="get_data_ing">获取数据中...</string>
    <string name="login_success">登录成功</string>
    <string name="login_error">登录失败</string>
    <string name="account">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="apply_permission_tips">应用正在申请访问内存和打电话权限</string>
    <string name="please_input_limit_pwd">请输入数字或字母</string>

    <!-- xml里面空格的使用 -->
    <!-- https://blog.csdn.net/u012917700/article/details/55510741?fps=1&locationNum=8 -->
    <!-- 下面开始项目资源 -->
    <string name="home_page">主页</string>
    <string name="user_manger">用户管理</string>
    <string name="order_manger">订单管理</string>
    <string name="goods_manger">商品管理</string>
    <string name="deliver_goods_manger">发货管理</string>
    <string name="data_statistics">数据统计</string>
    <string name="dispatch_manger">配送管理</string>
    <string name="person_warehouse">个人仓库</string>
    <string name="warehouse_manger">仓库管理</string>
    <string name="permission_manger">权限管理</string>
    <string name="personal_center">个人中心</string>
    <string name="distribute_permission">分配权限</string>
    <string name="add_user">添加用户</string>
    <string name="personal_info">个人信息</string>
    <string name="add_goods">添加商品</string>
    <string name="upload_goods">上传商品</string>
    <string name="infinite">无限</string>
    <string name="register_user">注册用户</string>
    <string name="commit_two_blank">提&#160;&#160;交</string>
    <string name="name_two_blank">姓&#160;&#160;名</string>
    <string name="please_set_pwd">请设置密码</string>
    <string name="please_re_set_pwd">请确认密码</string>
    <string name="please_set_sex">请选择性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="please_set_city_a_blank">&#160;地址(省/市/县)</string>
    <string name="please_set_detail_address">详细地址</string>
    <string name="phone_number">电话号码</string>
    <string name="verify_code">验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="get_verify_code_2">获取验证码(%1$ds)</string>
    <string name="choose_area">选择省市县</string>
    <string name="choose_role_to_user">选择用户角色</string>
    <string name="category">分类</string>
    <string name="now_stats_is">当前是(%1$s)</string>
    <string name="on_sale">上架</string>
    <string name="not_on_sale">下架</string>
    <string name="promotion">促销</string>
    <string name="normal">正常</string>
    <string name="un_normal">冻结</string>
    <string name="can_do">允许</string>
    <string name="no_can_do">不允许</string>
    <string name="all">全部</string>
    <string name="increase">新增</string>
    <string name="update_pwd">修改密码</string>
    <string name="save">保存</string>
</resources>
