<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/login_bg_layout"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="90dp"
            android:background="@drawable/bottom_line"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_account_box_9ccb39_24dp"
                android:textSize="@dimen/small" />

            <EditText
                android:id="@+id/et_account"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="请输入手机号"
                android:singleLine="true"
                android:textSize="@dimen/small" />

            <ImageView
                android:id="@+id/iv_clean_phone"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:scaleType="centerInside"
                android:src="@drawable/ic_clear"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bottom_line"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_lock_9ccb39_24dp"
                android:textSize="@dimen/small" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="请输入密码"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="@dimen/small" />

            <ImageView
                android:id="@+id/clean_password"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="0dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_clear"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/iv_show_pwd"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:scaleType="centerInside"
                android:src="@drawable/pass_gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="0dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_check_box_outline_blank_grey_700_24dp"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/remember_password"
            android:textSize="@dimen/small" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_login_btn_drawable"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_register_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="0dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bottom_line"
            android:text="@string/register_user"
            android:textColor="@color/main_color"
            android:textSize="@dimen/small" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textColor="@color/main_color"
        android:textSize="@dimen/big" />

</RelativeLayout>